--- a/nastya.html
+++ b/nastya.html
@@ -1,1 +1,227 @@
-# dr
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Для Насти ❤️</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: linear-gradient(45deg, #ffd6e7, #ffefef, #e6f0ff);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .container {
+            text-align: center;
+            padding: 40px;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+            max-width: 90%;
+            width: 800px;
+            z-index: 10;
+            transition: all 0.5s ease;
+        }
+
+        .countdown {
+            padding: 30px;
+        }
+
+        h1 {
+            font-size: 3.5rem;
+            margin-bottom: 30px;
+            color: #e83e8c;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .date {
+            font-size: 4rem;
+            font-weight: bold;
+            color: #e83e8c;
+            margin: 20px 0;
+            text-shadow: 0 3px 6px rgba(0,0,0,0.1);
+        }
+
+        .message {
+            font-size: 2.2rem;
+            color: #333;
+            line-height: 1.6;
+            margin-top: 30px;
+            padding: 20px;
+            background: rgba(232, 62, 140, 0.1);
+            border-radius: 15px;
+            display: none;
+        }
+
+        .timer {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+            flex-wrap: wrap;
+        }
+
+        .timer-box {
+            background: linear-gradient(135deg, #e83e8c, #ff7eb3);
+            color: white;
+            padding: 20px 15px;
+            border-radius: 15px;
+            min-width: 120px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+
+        .timer-value {
+            font-size: 3.5rem;
+            font-weight: bold;
+        }
+
+        .timer-label {
+            font-size: 1.2rem;
+            margin-top: 8px;
+        }
+
+        .heart {
+            color: #e83e8c;
+            display: inline-block;
+            animation: heartbeat 1.2s infinite;
+        }
+
+        .flowers {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        .flower {
+            position: absolute;
+            font-size: 2rem;
+            opacity: 0;
+            animation: fall 10s linear infinite;
+        }
+
+        @keyframes heartbeat {
+            0% { transform: scale(1); }
+            25% { transform: scale(1.2); }
+            50% { transform: scale(1); }
+            75% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        @keyframes fall {
+            0% {
+                top: -10%;
+                opacity: 0;
+                transform: rotate(0deg);
+            }
+            10% { opacity: 1; }
+            90% { opacity: 0.8; }
+            100% {
+                top: 110%;
+                opacity: 0;
+                transform: rotate(360deg);
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="flowers" id="flowers"></div>
+
+    <div class="container">
+        <div class="countdown" id="countdown">
+            <h1>До дня рождения Насти осталось:</h1>
+            <div class="timer">
+                <div class="timer-box">
+                    <div class="timer-value" id="days">00</div>
+                    <div class="timer-label">дней</div>
+                </div>
+                <div class="timer-box">
+                    <div class="timer-value" id="hours">00</div>
+                    <div class="timer-label">часов</div>
+                </div>
+                <div class="timer-box">
+                    <div class="timer-value" id="minutes">00</div>
+                    <div class="timer-label">минут</div>
+                </div>
+                <div class="timer-box">
+                    <div class="timer-value" id="seconds">00</div>
+                    <div class="timer-label">секунд</div>
+                </div>
+            </div>
+            <div class="date">20.06</div>
+        </div>
+
+        <div class="message" id="message">
+            <div class="date">20.06</div>
+            <h1>С Днём рождения, Настя<span class="heart">❤️</span></h1>
+            <div>Оставайся всегда такой же красивой, как сейчас!</div>
+        </div>
+    </div>
+
+    <script>
+        // Создаем цветочки для фона
+        const flowersContainer = document.getElementById('flowers');
+        const emojis = ['🌸', '🌹', '🌺', '🌷', '💐', '🌼', '🌻'];
+
+        for (let i = 0; i < 50; i++) {
+            const flower = document.createElement('div');
+            flower.classList.add('flower');
+            flower.innerHTML = emojis[Math.floor(Math.random() * emojis.length)];
+            flower.style.left = `${Math.random() * 100}%`;
+            flower.style.animationDuration = `${Math.random() * 10 + 5}s`;
+            flower.style.animationDelay = `${Math.random() * 5}s`;
+            flower.style.fontSize = `${Math.random() * 20 + 20}px`;
+            flowersContainer.appendChild(flower);
+        }
+
+        // Обратный отсчет до 20 июня
+        function updateCountdown() {
+            const now = new Date();
+            const currentYear = now.getFullYear();
+            let birthday = new Date(currentYear, 5, 20); // 5 = июнь
+
+            // Если день рождения в этом году уже прошел, берем следующий год
+            if (now > birthday) {
+                birthday = new Date(currentYear + 1, 5, 20);
+            }
+
+            const diff = birthday - now;
+
+            // Если сегодня 20 июня
+            if (now.getMonth() === 5 && now.getDate() === 20) {
+                document.getElementById('countdown').style.display = 'none';
+                document.getElementById('message').style.display = 'block';
+                document.title = "С Днём Рождения, Настя!";
+                return;
+            }
+
+            // Расчет дней, часов, минут, секунд
+            const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((diff % (1000 * 60)) / 1000);
+
+            // Обновление значений
+            document.getElementById('days').textContent = days.toString().padStart(2, '0');
+            document.getElementById('hours').textContent = hours.toString().padStart(2, '0');
+            document.getElementById('minutes').textContent = minutes.toString().padStart(2, '0');
+            document.getElementById('seconds').textContent = seconds.toString().padStart(2, '0');
+        }
+
+        // Обновляем отсчет каждую секунду
+        updateCountdown();
+        setInterval(updateCountdown, 1000);
+    </script>
+</body>
+</html>
